--- a/front_end/static/css/contact.css
+++ b/front_end/static/css/contact.css
@@ -24,10 +24,10 @@
   background: #555;
 }
 
-body{
+#container{
   height: 100vh;
   width: 100%;
-  background-color: rgb(50, 50, 50);
+  background-color: rgb(45, 45, 45);
 }
 
 #title{
@@ -36,7 +36,7 @@ body{
   font-size: 63px;
   text-align: center;
   position: relative;
-  top: 7%;
+  top: 14%;
   letter-spacing: 5px;
 }
 
@@ -44,6 +44,7 @@ form{
   height: 100%;
   width: 100%;
   display: block;
+  justify-content: center;
 }
 
 .inputBox{
@@ -89,11 +90,14 @@ form{
 }
 
 input{
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(50, 50, 50);
   width: 100%;
   height: 70%;
   border-color: rgb(20, 64, 179);
   color: white;
+  font-size: 16px;
+  position: relative;
+  bottom: 45%;
 }
 
 input:focus{
@@ -102,39 +106,41 @@ input:focus{
 }
 
 #nameBox{
-  top: 15%;
+  top: 13%;
 }
 
 #emailBox{
-  top: 25%;
+  top: 17%;
 }
 
 #reasonBox{
-  top: 35%;
+  top: 21%;
 }
 
-#reasonList{
-  background-color: rgb(60, 60, 60);
+#reason{
+  background-color: rgb(50, 50, 50);
   width: 100%;
   height: 70%;
   border-color: rgb(20, 64, 179);
   color: white;
+  font-size: 16px;
+  position: relative;
+  bottom: 45%;
 }
 
-#reasonList:focus{
+#reason:focus{
   background-color: white;
   color: black;
 }
 
 #messageBox{
-  top: 45%;
+  top: 25%;
   width: 40%;
   height: 30%;
 }
 
 #messageLabel{
   width: 100%;
-  height: 100%;
 }
 
 #t1{
@@ -153,7 +159,8 @@ abbr:hover::after{
 textarea{
   width: 100%;
   height: 70%;
-  background-color: rgb(60, 60, 60);
+  font-size: 16px;
+  background-color: rgb(50, 50, 50);
   border-color: rgb(20, 64, 179);
   color: white;
 }
@@ -164,18 +171,42 @@ textarea:focus{
 }
 
 #buttonBox{
-  text-align: center;
   position: relative;
-  top: 50%;
-  height: 25%;
+  top: 25%;
+  height: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button{
-  height: 15%;
+  height: 75%;
   width: 10%;
-  position: relative;
-  bottom: 25%;
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(50, 50, 50);
   border-color: rgb(20, 64, 179);
   color: white;
+}
+
+@media screen and (max-width: 1700px){
+  .inputBox{
+    width: 27%;
+  }
+
+  button{
+    width: 15%;
+  }
+}
+
+@media screen and (max-width: 1300px){
+  .inputBox{
+    width: 35%;
+  }
+
+  #messageBox{
+    width: 60%;
+  }
+
+  button{
+    width: 20%;
+  }
 }
