--- a/front_end/static/css/projects.css
+++ b/front_end/static/css/projects.css
@@ -1,3 +1,7 @@
+:root{
+  --defaultTabWidth: 35%;
+}
+
 *{
   margin: 0 auto;
   padding: 0;
@@ -24,9 +28,23 @@
   background: #555;
 }
 
+@keyframes bounceIn{
+  0%{
+      transform: scale(0.1);
+      opacity: 0;
+  }
+  60%{
+      transform: scale(1.2);
+      opacity: 1;
+  }
+  100%{
+      transform: scale(1);
+  }
+}
+
 #container{
   width: 100%;
-  height: 250vh;
+  height: 200vh;
   background-color: rgb(45, 45, 45);
   overflow: hidden;
 }
@@ -58,6 +76,17 @@
   color: white;
 }
 
+#headerSubLink{
+  margin-right: 0;
+  margin-left: .5%;
+  color: white;
+  transition: .5s ease;
+}
+
+#headerSubLink:hover{
+  color: rgb(20, 64, 179);
+}
+
 #tabBox{
   height: 10%;
   width: 100%;
@@ -74,7 +103,7 @@
 
 .tab p{
   display: flex;
-  width: 35%;
+  width: var(--defaultTabWidth);
   justify-content: center;
   position: relative;
   top: 50%;
@@ -86,7 +115,7 @@
 }
 
 #showcaseBox{
-  height: 50%;
+  height: 74%;
   width: 300%;
   position: relative;
   left: -100%;
@@ -102,161 +131,233 @@
   left: 6px;
 }
 
-.displayBox{
-  height: 23%;
-  width: 30%;
-  margin-bottom: 5%;
+.showcaseSectionDisplayRow{
+  height: 25%;
+  width: 100%;
+  position: relative;
   display: flex;
-  justify-content: center;
-  background-color: rgb(60, 60, 60);
-  box-shadow: 10px 10px 10px 10px rgb(30, 30, 30);
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.rowOne{
+  top: 15%;
+}
+
+.rowTwo{
+  top: 35%;
+}
+
+.displayBox{
+  width: 35%;
+  height: 100%;
+  background-color: rgb(55, 55, 55);
+  border: solid black;
+  box-shadow: 10px 10px 8px 10px rgb(30, 30, 30);
 }
 
 .viewImageBox{
   height: 80%;
   width: 100%;
-  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .viewImage{
-  height: 60%;
-  width: 80%;
+  height: 70%;
+  width: 45%;
 }
 
-.viewBox{
-  display: inline-block;
+.viewButtonBox{
   height: 20%;
   width: 100%;
-  position: relative;
-  top: 80%;
-
-  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .viewButton{
-  height: 60%;
-  width: 30%;
-  display: flex;
-  cursor: pointer;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(45, 45, 45);
-  border-color: rgb(20, 64, 179);
+  height: 50%;
+  width: 50%;
   color: white;
+  font-size: 20px;
+  background-color: rgb(40, 40, 40);
+  border: solid rgb(20, 64, 179);
+  cursor: pointer;
 }
 
-#bioBox{
+.viewButton:hover{
+  background-color: rgb(45, 45, 45);
+}
+
+.bioBox{
+  height: 100%;
   width: 100%;
-  height: 25%;
+  position: absolute;
+  z-index: 2;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .bio{
-  width: 100%;
-  height: 100%;
-  justify-content: space-around;
-  background-color: rgb(55, 55, 55);
-  border: solid black;
-}
-
-.bioHidden{
-  display: none;
+  height: 55%;
+  width: 75%;
+  opacity: 0;
+  background-color: rgb(40, 40, 40);
+  border: solid rgb(10, 10, 10);
 }
 
 .bioImageBox{
   display: inline-block;
-  width: 49.5%;
   height: 100%;
-  position: relative;
-  left: .5%;
+  width: 49.8%;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .bioImage{
-  height: 65%;
-  width: 65%;
+  height: 45%;
+  width: 70%;
   position: relative;
+  bottom: 25%;
   left: 15%;
-  bottom: 15%;
 }
 
 .bioInfoBox{
   display: inline-block;
-  width: 49.5%;
   height: 100%;
+  width: 49.8%;
   position: relative;
-  left: .5%;
-  background-color: rgb(50, 50, 50);
-  border: solid black;
+  background-color: rgb(35, 35, 35);
+  border-left: solid rgb(10, 10, 10);
+  margin: 0;
 }
 
-.bioInfoTitleBox{
+.bioInfoHeaderBox{
+  height: 15%;
   width: 100%;
-  height: 20%;
-}
-
-.bioInfoTitleHeader{
-  height: 40%;
-  width: 100%;
-  font-size: 35px;
-  color: white;
-  position: relative;
-  top: 10%;
-  left: 3%;
-  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
-}
-
-.bioInfoTitleName{
-  font-size: 42px;
-  color: white;
-  font-family: 'Bitter', sans-serif;
-  position: relative;
-  left: 5%;
-}
-
-.descriptionBox{
-  width: 100%;
-  height: 8%;
   justify-content: space-around;
 }
 
-.bioInfoDescriptionItem{
-  display: inline-block;
-  position: relative;
+.bioInfoHeaderExit{
+  height: 50%;
+  width: 10%;
+  float: right;
+  text-align: center;
+  font-family: '', sans-serif;
+  font-size: 50px;
+  color: white;
+  transition: .5s ease;
+  cursor: pointer;
+}
+
+.bioInfoHeaderExit:hover{
+  color: red;
+}
+
+.bioInfoHeaderTitle{
+  position: absolute;
   left: 5%;
-  font-size: 16px;
   color: white;
-  width: 24%;
-  height: 100%;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-size: 45px;
 }
 
-.language{
-  bottom: 35%;
+.bioInfoHeaderName{
+  position: absolute;
+  top: 5%;
+  left: 6%;
+  color: white;
+  font-family: 'Open Sans Condensed', cursive;
+  font-size: 65px;
 }
 
-
-.bioAboutBox{
+.bioInfoDescriptionsBox{
+  height: 30%;
   width: 100%;
-  height: 40%;
-  font-size: 20px;
+}
+
+.bioInfoDescriptionSectionBox{
+  height: 33.3%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.description{
+  display: inline-block;
+  width: 17%;
   color: white;
+  font-size: 16px;
+}
+
+.bioInfoAbout{
+  height: 30%;
+  width: 100%;
+  color: white;
+  font-size: 20px;
   overflow-y: scroll;
 }
 
-.bioButtonBox{
+.bioInfoButtonsBox{
+  height: 25%;
   width: 100%;
-  height: 20%;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .bioButton{
-  height: 20%;
+  height: 15%;
   width: 25%;
-  display: flex;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 1%;
+  background-color: rgb(40, 40, 40);
+  border: solid rgb(20, 64, 179);
+  color: white;
+  font-size: 18px;
 }
 
-.buttonHidden{
+.visit, .source{
+  cursor: pointer;
+}
+
+.visit, .source:hover{
+  background-color: rgb(55, 55, 55); 
+}
+
+.disabled{
   opacity: 50%;
+  text-decoration: line-through; 
+}
+
+@media screen and (max-width: 1350px){
+  .bioImageBox{
+    width: 49.5%;
+  }
+
+  .bioInfoBox{
+    width: 49.5%;
+  }
+
+  .bioInfoHeaderName{
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 1300px){
+  :root{
+    --defaultTabWidth: 50%;
+  }
+
+  .displayBox{
+    width: 45%;
+  }
+
+  .bio{
+    width: 100%;
+  }
 }
