--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -17,7 +17,7 @@
       <div id="aboutBox">
         <ul id="extraNavButtonsBox">
           <li><a id="extraNavButton" href="/projects">View Projects</a></li>
-          <li><a id="extraNavButton" href="#">View Resume</a></li>
+          <li><a id="extraNavButton" href="/resume">View Resume</a></li>
           <li><a id="extraNavButton" href="/contact">Contact Me</a></li>
         </ul>
         <div class="aboutButtonBox">
