Final edits of V 1.0, added bootstrap resizing for all pages

--- a/frontend/static/css/contact.css
+++ b/frontend/static/css/contact.css
@@ -210,3 +210,13 @@ button{
     width: 20%;
   }
 }
+
+@media screen and (max-width: 998px){
+  #messageBox{
+    width: 75%;
+  }
+
+  .inputBox{
+    width: 65%;
+  }
+}
