--- a/frontend/static/css/projects.css
+++ b/frontend/static/css/projects.css
@@ -1,5 +1,5 @@
 :root{
-  --defaultTabWidth: 35%;
+  --defaultTabWidth: 65%;
 }
 
 *{
@@ -42,9 +42,9 @@
   }
 }
 
-#container{
+#bodyBox{
   width: 100%;
-  height: 200vh;
+  height: 175vh;
   background-color: rgb(45, 45, 45);
   overflow: hidden;
 }
@@ -81,6 +81,7 @@
   margin-left: .5%;
   color: white;
   transition: .5s ease;
+  text-decoration: underline;
 }
 
 #headerSubLink:hover{
@@ -88,27 +89,24 @@
 }
 
 #tabBox{
+  margin: 0;
+  margin-top: 35px;
   height: 10%;
   width: 100%;
-  justify-content: space-around;
+  color: white;
+  list-style: none;
 }
 
 .tab{
-  display: inline-block;
-  width: 33%;
-  height: 100%;
-  position: relative;
-  left: 5px;
+  display: flex;
+  align-items: flex-end;
+  padding: 0;
 }
 
 .tab p{
-  display: flex;
   width: var(--defaultTabWidth);
-  justify-content: center;
-  position: relative;
-  top: 50%;
-  font-size: 25px;
-  color: white;
+  font-size: 30px;
+  text-align: center;
   border: solid rgb(20, 64, 179);
   transition: .2s ease-in;
   cursor: pointer;
@@ -126,35 +124,27 @@
 .showcaseSectionBox{
   display: inline-block;
   height: 100%;
-  width: 33.22%;
+  width: 33%;
   position: relative;
   left: 6px;
+  padding: 0;
 }
 
 .showcaseSectionDisplayRow{
-  height: 25%;
-  width: 100%;
-  position: relative;
+  margin: 0;
+  height: 100%;
+  list-style: none;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  list-style: none;
 }
 
-.rowOne{
-  top: 15%;
+.showcaseSectionDisplayRow li{
+  background-color: rgb(40, 40, 40);
+  border: solid rgb(10, 10, 10);
 }
 
-.rowTwo{
-  top: 35%;
-}
-
-.displayBox{
-  width: 35%;
-  height: 100%;
-  background-color: rgb(55, 55, 55);
-  border: solid black;
-  box-shadow: 10px 10px 8px 10px rgb(30, 30, 30);
+.showcaseSectionDisplayRow li:hover{
+  background-color: rgb(35, 35, 35);
 }
 
 .viewImageBox{
@@ -167,7 +157,7 @@
 
 .viewImage{
   height: 70%;
-  width: 45%;
+  width: 40%;
 }
 
 .viewButtonBox{
@@ -203,18 +193,16 @@
 }
 
 .bio{
-  height: 55%;
-  width: 75%;
+  height: 60%;
+  width: 80%;
   opacity: 0;
-  background-color: rgb(40, 40, 40);
-  border: solid rgb(10, 10, 10);
+  justify-content: center;
 }
 
 .bioImageBox{
-  display: inline-block;
-  height: 100%;
-  width: 49.8%;
-  margin: 0;
+  background-color: rgb(40, 40, 40);
+  border: solid rgb(10, 10, 10);
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -222,23 +210,16 @@
 .bioImage{
   height: 45%;
   width: 70%;
-  position: relative;
-  bottom: 25%;
-  left: 15%;
 }
 
 .bioInfoBox{
-  display: inline-block;
-  height: 100%;
-  width: 49.8%;
-  position: relative;
   background-color: rgb(35, 35, 35);
-  border-left: solid rgb(10, 10, 10);
+  border: solid rgb(10, 10, 10);
   margin: 0;
 }
 
 .bioInfoHeaderBox{
-  height: 15%;
+  height: 20%;
   width: 100%;
   justify-content: space-around;
 }
@@ -298,14 +279,14 @@
 
 .bioInfoAbout{
   height: 30%;
-  width: 100%;
+  width: 95%;
   color: white;
   font-size: 20px;
   overflow-y: scroll;
 }
 
 .bioInfoButtonsBox{
-  height: 25%;
+  height: 20%;
   width: 100%;
   display: flex;
   align-items: center;
@@ -313,7 +294,7 @@
 }
 
 .bioButton{
-  height: 15%;
+  height: 27%;
   width: 25%;
   background-color: rgb(40, 40, 40);
   border: solid rgb(20, 64, 179);
@@ -335,30 +316,63 @@
   text-decoration: line-through; 
 }
 
-@media screen and (max-width: 1350px){
-  .bioImageBox{
-    width: 49.5%;
-  }
-
-  .bioInfoBox{
-    width: 49.5%;
-  }
-
-  .bioInfoHeaderName{
-    font-size: 50px;
-  }
-}
-
-@media screen and (max-width: 1300px){
-  :root{
-    --defaultTabWidth: 50%;
-  }
-
-  .displayBox{
-    width: 45%;
+@media screen and (max-width: 1200px){
+  #bodyBox{
+    height: 200vh;
   }
 
   .bio{
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 992px){
+  #showcaseBox{
+    height: 70%;
+  }
+
+  .bio{
+    height: 100%;
     width: 100%;
+  }
+
+  .bioImageBox{
+    height: 50%;
+  }
+
+  .bioInfoBox{
+    height: 50%;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .showcaseSectionBox{
+    left: 6px;
+  }
+}
+
+@media screen and (max-width: 590px){
+  #headerTitle{
+    font-size: 41px;
+  }
+
+  #headerSub{
+    font-size: 19px;
+  }
+
+  .bioInfoHeaderTitle{
+    font-size: 40px;
+  }
+
+  .bioInfoHeaderName{
+    font-size: 45px;
+  }
+
+  .description{
+    font-size: 12px;
+  }
+
+  .bioButton{
+    width: 40%;
   }
 }
