--- a/frontend/static/css/resume.css
+++ b/frontend/static/css/resume.css
@@ -26,8 +26,12 @@
 
 #container{
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     background-color: rgb(45, 45, 45);
+}
+
+.container-fluid{
+    height: 70vh;
 }
 
 #headerBox{
@@ -47,7 +51,7 @@
 }
   
 #headerSub{
-    height: 20%;
+    height: 55%;
     width: 100%;
     display: flex;
     align-items: flex-start;
@@ -66,12 +70,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 
 
 #resumeButtonBox li{
-    width: 70%;
-    height: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,20 +87,40 @@
     font-size: 35px;
     border: solid rgb(20, 64, 179);
     transition: .5s ease;
-    width: 25%;
     text-align: center;
+    width: 75%;
 }
 
 .resumeLink:hover{
     background-color: rgb(150, 150, 150, 0.2);
 }
 
-#download{
-    margin-right: 10%;
+@media screen and (max-width: 1300px){
+    #headerSub{
+        font-size: 45px;
+    }
 }
 
-@media screen and (max-width: 1400px){
-    #resumeButtonBox li{
-        width: 100%;
+@media screen and (max-width: 768px){
+    #headerTitle{
+        font-size: 45px;
+    }
+
+    #headerSub{
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 530px){
+    #headerTitle{
+        font-size: 30px;
+    }
+
+    #headerSub{
+        font-size: 20px;
+    }
+
+    .resumeLink{
+        font-size: 25px;
     }
 }
