--- a/frontend/views/contact.ejs
+++ b/frontend/views/contact.ejs
@@ -2,13 +2,35 @@
 
 <html>
   <head name="contact">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- optional set charset--><meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Standard Bootstrap library CDN--> <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/contact.css"></link>
   </head>
   <div id="container">
     <div id="navbarContainer">
-      <script type="text/javascript" src="../static/src/navbar/setNavbar.js"></script>
+      <link rel="stylesheet" href="../static/css/navbar.css" />
+      <nav class="navbar navbar-expand-md fixed-top">
+        <a class="navbar-brand" href="/">Jacob Losco</a>
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="main-navigation">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/resume">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <script type="text/javascript" src="../static/src/navbar/scrollCheck.js"></script>
     </div>
     <body>
       <form action="/contact/submit" method="POST" id="contactForm" novalidate>
@@ -47,6 +69,8 @@
     </body>
   </div>
   <footer>
+    <!-- JQuery library for Boostrap --> <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <!-- Bootstrap Javascript library --> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../static/src/footer/setFooter.js"></script>
   </footer>
   <script type="text/javascript" src="../static/src/contact/form_validation.js"></script>
